powernap (2.10) unreleased; urgency=low

  * UNRELEASED

 -- Dustin Kirkland <kirkland@ubuntu.com>  Thu, 02 Jun 2011 17:43:27 -0400

powernap (2.9-0ubuntu1) oneiric; urgency=low

  * sbin/powernap, sbin/powernapd:
    - add an indicator to show when powernap is engaged, remove after waking
  * === added directory debian/source, debian/source/format:
    - add this back in (got a fix for release scripts)

 -- Dustin Kirkland <kirkland@ubuntu.com>  Thu, 02 Jun 2011 17:43:23 -0400

powernap (2.8-0ubuntu1) oneiric; urgency=low

  [ Andres Rodriguez ]
  * Switch to dpkg-source 3.0 (quilt) format
  * Switch to dh_python2 instead of dh_pycentral
  * sbin/powernap: ACTION_METHOD is now passed as an argument.
  * Second Stage Action Method (LP: #711521)
    - config: Add config options.
    - powernap/powernap.py: Add loading of config values.
    - sbin/powernapd: Add logic to handle second stage action.

  [ Dustin Kirkland ]
  * config: remove trailing whitespace
  * debian/source/format, === removed directory debian/source:
    - drop these for now, as they're breaking the release scripts

 -- Dustin Kirkland <kirkland@ubuntu.com>  Thu, 02 Jun 2011 16:51:20 -0400

powernap (2.7-0ubuntu1) oneiric; urgency=low

  [ Jim Heck ]
  * DiskMonitor: Tracks disks activity by monitoring its state. If
    "standby/sleeping" they are assumed to be inactive. (LP: #738764).

  [ Mathieu Bérard ]
  * actions/kms_powermode: Add action method to enable power management for
    radeon kms driver. Should be removed when applied upstream or pm-utils.

  [ Andres Rodriguez ]
  * sbin/powernapd: Take recover action when entered to powersave with
    powernap-now (LP: #768598)

  [ Dustin Kirkland ]
  * powernap/monitors/LoadMonitor.py: scale monitors correctly, LP: #777361

 -- Dustin Kirkland <kirkland@ubuntu.com>  Wed, 04 May 2011 14:44:50 -0500

powernap (2.6-0ubuntu1) natty; urgency=low

  [ Andres Rodriguez ]
  * debian/copyright: Update upstream authors and license years.