@@ -1,12 +1,13 @@
 Source: powernap
 Section: admin
 Priority: optional
-Maintainer: Dustin Kirkland <kirkland@ubuntu.com>
+Maintainer: Andres Rodriguez <andreserl@ubuntu.com>
+XSBC-Original-Maintainer: Dustin Kirkland <kirkland@ubuntu.com>
 Standards-Version: 3.9.1
-Build-Depends: debhelper (>= 7), gettext-base, python (>= 2.6.6-3~)
-XS-Python-Version: current
+Build-Depends: debhelper (>= 7.0.50~), gettext-base, python (>= 2.6.6-3~)
+X-Python-Version: >= 2.5
 Homepage: http://launchpad.net/powernap
-Vcs-Bzr: http://bazaar.launchpad.net/~kirkland/powernap/trunk
+Vcs-Bzr: http://bazaar.launchpad.net/~powernap/powernap/trunk
 
 Package: powernap
 Architecture: all
