@@ -1,8 +1,16 @@
 powernap (2.10) unreleased; urgency=low
 
-  * UNRELEASED
+  * Add support for port ranges to TCPMonitor (LP: #760729)
+    - powernap/monitors/TCPMonitor.py: Add support.
+    - powernap/powernap.py: Ensure that ports are now passed as strings.
+    - config: Update to reflect new feature.
+  * debian/control: 
+    - Bump Build-Depends on debhelper.
+    - Change python supported version.
+    - Update Bzr-VCS to current.
+    - Set Dustin as Original maintainer and set myself as maintainer.
 
- -- Dustin Kirkland <kirkland@ubuntu.com>  Thu, 02 Jun 2011 17:43:27 -0400
+ -- Andres Rodriguez <andreserl@ubuntu.com>  Thu, 09 Jun 2011 14:46:58 -0400
 
 powernap (2.9-0ubuntu1) oneiric; urgency=low
 
